--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 name: Build and Test BookKeeper
 
 on:
@@ -14,7 +13,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    outputs:
+      build-artifact: ${{ steps.build-artifact.outputs.path }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -35,6 +35,27 @@ jobs:
 
       - name: Build with Maven (skip tests)
         run: mvn clean install -DskipTests
+
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v4
+        with:
+          java-version: '8'
+          distribution: 'temurin'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven
 
       - name: Run tests
         run: mvn test
