--- a/.github/workflows/dead-link-checker.yaml
+++ b/.github/workflows/dead-link-checker.yaml
@@ -14,30 +14,20 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Dead link checker
+# name: Dead link checker
 
-on:
-  push:
-  pull_request:
-    branches:
-      - master
-      - branch-*
-    paths:
-      - '**.md'
+# on:
+#   push:
+#   pull_request:
+#     branches:
+#       - master
+#       - branch-*
+#     paths:
+#       - '**.md'
 
-concurrency:
-  group: dlc-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
+# concurrency:
+#   group: dlc-${{ github.event.pull_request.number || github.ref }}
+#   cancel-in-progress: true
 
-jobs:
-  check-dead-links:
-    name: Dead link checker
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v4
-      - run: sudo npm install -g markdown-link-check@3.11.2
-      - run: |
-          for file in $(find . -name "*.md"); do
-            markdown-link-check -c .dlc.json -q "$file"
-          done
+# jobs:
+#   check-dead-links:
