--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
-          java-version: '8'
+          java-version: '11'
           distribution: 'temurin'
 
       - name: Cache Maven packages
@@ -34,7 +34,7 @@ jobs:
             ${{ runner.os }}-maven
 
       - name: Build with Maven (skip tests)
-        run: mvn clean install -DskipTests
+        run: mvn clean install # -DskipTests
 
  # test:
     # needs: build
